# python-tutorial

./: .dockerignore  .flake8  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .yamlfmt  00-index.ipynb  00-intro.ipynb  00_index.ipynb  00_intro.ipynb  00_python_intro.ipynb  01-basic_datatypes.ipynb  01_basic_datatypes.ipynb  02-control_flow.ipynb  02_control_flow.ipynb  03-functions.ipynb  03_functions.ipynb  04_input_output.ipynb  05-object_oriented_programming.ipynb  05_object_oriented_programming.ipynb  06_modules_and_packages.ipynb  10-manage_python_project.ipynb  10_manage_python_project.ipynb  11-functional_programming.ipynb  11_functional_programming.ipynb  12-functions_advanced.ipynb  12_functions_advanced.ipynb  13-object_oriented_programming_advanced.ipynb  13_object_oriented_programming_advanced.ipynb  14-threads.ipynb  14_threads.ipynb  20-library_matplotlib.ipynb  21-library_numpy.ipynb  22_library_sklearn.ipynb  23-library_scipy.ipynb  23_library_scipy.ipynb  24_library_pandas.ipynb  25_image_classification.ipynb  25_libraries_image_classification.ipynb  (+46 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docker-image.yml  docker-build.yml  repo2docker.yml
binder/: environment.yml  ipython_config.py  postBuild  start
data/: dict.csv
data/data_exploration/: World-happiness-report-updated_2024.csv  bubbly.py  country_region_mapping.csv
data/lm/: names.txt
docker/: activate-custom-env.sh  environment.yml  ipython_config.py  jupyter_server_config.py  overrides.json  post-build.sh  setup_custom_env.py
extra/: 07_some_python_insights.ipynb  32_language_modeling_1_solutions.ipynb
slides/: control_flow_slides.ipynb  functional_programming_slides.ipynb  functions_slides.ipynb  input_output_slides.ipynb  intro_slides.ipynb
tests/: test_example.py  testsuite.py
tutorial/: ai.py  basic_datatypes.py  common.py  control_flow.py  data_exploration_helper.py  enable_ai.py  extract_data.py  functional_programming.py  functions.py  functions_advanced.py  input_output.py  intro_plotly_helper.py  library_pandas_solutions.ipynb  my_bubbly.py  object_oriented_programming.py  pandas_helpers.py  prepare_magic_file.py  reveal_solution.py  test_magic.ipynb  testsuite.py  threads.py  toc.py
tutorial/advanced/: threads.ipynb
tutorial/quiz/: common.py  control_flow.py  functional_programming.py  functions_advanced.py  input_output.py  object_oriented_programming.py  (+1 more)
utils/: extract_data.py  prepare_secret_message.py
(+66 files in other folders)
